<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">漫喫のしおり</string>
    <string name="main_title">メインメニュー</string>
    <string name="comic_list_title">一覧</string>
    <string name="compose_title">編集</string>
    <string name="main_choice_list">一覧表示</string>
    <string name="main_choice_new">まんが登録</string>
    <string name="title">タイトル</string>
    <string name="status">状態</string>
    <string name="story">あらすじ</string>
    <string name="note">メモ</string>
    <string name="page">ページ</string>
    <string name="volume">巻</string>
    <string name="bookmark">しおり</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>
    <string name="status_unread">未読</string>
    <string name="status_waiting">新刊待ち</string>
    <string name="status_progress">読みかけ</string>
    <string name="status_complete">完結</string>
    <string name="no_bookmark_data">表示するしおりがありません</string>
    <string name="menu_create">しおり作成</string>
    <string name="menu_delete">タブ内全削除</string>
    <string name="menu_export">SDカードに保存</string>
    <string name="menu_import">SDカードから復元</string>
    <string name="msg_confirm_delete">タブ内のしおりをすべて削除しますか？</string>
    <string name="msg_title_confirm_delete">削除確認</string>
    <string name="button_yes">はい</string>
    <string name="button_no">いいえ</string>
    <string name="last_update_date">最終更新日</string>
    <string name="msg_title_confirm_import">復元の実行確認</string>
    <string name="msg_confirm_import">復元を実行すると、SDカードへ保存したときの状態に戻るため、現在のしおりデータは失われます。復元を実行しますか？</string>
    <string name="button_ok">確認</string>
    <string name="msg_title_confirm_overwrite">上書き確認</string>
    <string name="msg_confirm_overwrite">SDカードにファイル「siori_export.xml」が既に存在します。上書きしますか？</string>
    <string name="msg_confirm_one_delete">このしおりを削除しますか？</string>
    <string name="msg_title_confirm_back">破棄確認</string>
    <string name="msg_confirm_back">編集内容を破棄して前の画面に戻りますか？</string>
</resources>
